test/corpus/collection.txt
================================================================================
Simple List
================================================================================

(a b c)
(a, b, c)

--------------------------------------------------------------------------------

(source
  (list
    (symbol)
    (symbol)
    (symbol))
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
Simple Vector
================================================================================

[a b c]
[a, b, c]

--------------------------------------------------------------------------------

(source
  (vector
    (symbol)
    (symbol)
    (symbol))
  (vector
    (symbol)
    (symbol)
    (symbol)))

================================================================================
Simple Map
================================================================================

{:a 1 :b 2}
{:a 1, :b 2}

--------------------------------------------------------------------------------

(source
  (map
    (keyword) (number)
    (keyword) (number))
  (map
    (keyword) (number)
    (keyword) (number)))

================================================================================
Namespace Map
================================================================================

#:person{:first "Han"
         :last "Solo"
         :ship #:ship{:name "Millennium Falcon"
                      :model "YT-1300f light freighter"}}

--------------------------------------------------------------------------------

(source
  (map
    (keyword)
    (keyword) (string)
    (keyword) (string)
    (keyword) (map
                (keyword)
                (keyword) (string)
                (keyword) (string))))

================================================================================
Simple Set
================================================================================

#{a b c}
#{a, b, c}

--------------------------------------------------------------------------------

(source
  (set
    (symbol)
    (symbol)
    (symbol))
  (set
    (symbol)
    (symbol)
    (symbol)))
