test/corpus/comment.txt
================================================================================
Simple Comment
================================================================================

a  ; comment
"asdf" ; comment
"asdf  ; not-comment
asdf"
--------------------------------------------------------------------------------

(source
  (symbol) (comment)
  (string) (comment)
  (string))
