test/corpus/symbol.txt
================================================================================
Simple Symbol
================================================================================

a

--------------------------------------------------------------------------------

(source
  (symbol))

================================================================================
Symbol
================================================================================

a
b  c
clojure * + ! - _ ' ? < > =

--------------------------------------------------------------------------------

(source
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol))

================================================================================
Symbol with namespace
================================================================================

user/a
user.test/a

--------------------------------------------------------------------------------

(source
  (symbol)
  (symbol))

================================================================================
Nil
================================================================================

nil

--------------------------------------------------------------------------------

(source
  (nil))

================================================================================
Boolean
================================================================================

true
false

--------------------------------------------------------------------------------

(source
  (boolean)
  (boolean))
